--- a/index.html
+++ b/index.html
@@ -18,18 +18,30 @@
     <section>
         <h1 style="font-size: 2rem;">My Templates</h1><br>
         <div class="flex">
-            <a href="#"><img src="clipboard.jpg" alt="clipboard"></a>
-            <a href="#"><img src="desktop-huddle.jpg" alt="desktop-huddle"></a>
-            <a href="#"><img src="desktop-preview.jpg" alt="desktop-preview"></a>
-            <a href="#"><img src="intro-section.jpg" alt="intro-section"></a>
-            <a href="#"><img src="manage-landing-page.jpg" alt="manage-landing-page"></a>
-            <a href="#"><img src="hudlle x r.jpg" alt="desktop-huddle"></a>
-            <a href="#"><img src="social-proof.jpg" alt="social-proof"></a>
-            <a href="#"><img src="notification.jpg" alt="notification"></a>
-            <a href="#"><img src="sneakers_preview.jpg" alt="sneakers_preview"></a>
-            <a href="#"><img src="huddle_preview.jpg" alt="sneakers_preview"></a>
-            <a href="#"><img src="griddboxx.jpg" alt="griddboxx"></a>
-            <a href="#"><img src="desktop-design.jpg" alt="desktop-design"></a>
+            <a href="https://clipboard-landing-page-sommzy.netlify.app/" target="_blank"><img src="clipboard.jpg"
+                    alt="clipboard"></a>
+            <a href="https://sommzy-single-huddle-landing-page.netlify.app/" target="_blank"><img
+                    src="desktop-huddle.jpg" alt="desktop-huddle"></a>
+            <a href="https://sommzyfylolandingpage.netlify.app/" target="_blank"><img src="desktop-preview.jpg"
+                    alt="desktop-preview"></a>
+            <a href="https://intro-section-with-drop-navigation.netlify.app/" target="_blank"><img
+                    src="intro-section.jpg" alt="intro-section"></a>
+            <a href="https://sommzy-manage-landing-page.netlify.app/" target="_blank"><img src="manage-landing-page.jpg"
+                    alt="manage-landing-page"></a>
+            <a href="https://huddle-landing-page-2.netlify.app/" target="_blank"><img src="hudlle x r.jpg"
+                    alt="desktop-huddle"></a>
+            <a href="https://social-section-landing-page.netlify.app/" target="_blank"><img src="social-proof.jpg"
+                    alt="social-proof"></a>
+            <a href="https://codeck-hacks.netlify.app/" target="_blank"><img src="notification.jpg"
+                    alt="notification"></a>
+            <a href="https://ecormmerce-page-sommzy-site.netlify.app/" target="_blank"><img src="sneakers_preview.jpg"
+                    alt="sneakers_preview"></a>
+            <a href="https://huddle-landing-page-sommzy.netlify.app/" target="_blank"><img src="huddle_preview.jpg"
+                    alt="sneakers_preview"></a>
+            <a href="https://testimonial-site-section.netlify.app/" target="_blank"><img src="griddboxx.jpg"
+                    alt="griddboxx"></a>
+            <a href="https://sunny-side-landing-page-main.netlify.app/" target="_blank"><img src="desktop-design.jpg"
+                    alt="desktop-design"></a>
         </div>
     </section>
 </body>
